# kusabira

./: .gitignore  Cargo.toml  README.md
himetake/: Cargo.toml  README.md  build.rs
himetake/src/: hello_world_c_1.c  hello_world_c_1.h  hello_world_c_2.c  hello_world_c_2.h  hello_world_c_types.h  hello_world_export_to_rust.h  hello_world_import_from_rust.h  hello_world_rust_1.rs  hello_world_rust_2.rs  imported.rs  lib.rs  main.rs  unixcw_libcw_demo.c  unixcw_libcw_demo.h  unixcw_libcw_demo.rs
himetake/src/imported/: wrapper.rs
kusabira/: Cargo.toml  README.md
kusabira/src/: builder.rs  error.rs  hooks.rs  lib.rs
kusabira/src/builder/: tests.rs
kusabira/src/builder/tests/: busshi.rs
kusabira/src/builder/tests/busshi/: bindgen_builder.rs  cc_build.rs  glob.rs  std_path_path_buf.rs
kusabira/src/hooks/: bindgen.rs  cc.rs  glob.rs
